# OpenGL-CLion-Project-Template

./: CMakeLists.txt  OpenGL_Full.sln  README.md
Linking/include/glad/: glad.h
OpenGL_Full/: OpenGL_Full.cpp  OpenGL_Full.vcxproj  OpenGL_Full.vcxproj.filters  glad.c  main.cpp
